* dying in maps no longer prevented. This means dying will be painful and you will have to go back to your gear! 
* map leave pearls are no longer free! You now have to kill a boss to get one, otherwise use the portal at the dungeon entrance to go back.
* increased loot drops by a bunch in maps


* added recipe for increase map tier item in tinkering station
* most loot crate rewards now cant drop common rarity
* fix loot crates without nbt crashing game
* added divine shield cleric spell
* added poisoned weapons druid spell
* added synergies: blizzard, thunder dash, poisoned weapons
* added a whole new ranger skill tree with its own synergies!
* added new unique items
* disabled my workaround that allowed dimension deletition because it caused server crashes. But now dimensions won't be deleted until forge accepts a PR
* decreased item requirements a bit
* fix runewords
* only 1 unique rune per runed item is now allowed
* fix some heals not working
* reduced boss hp, increased xp and loot
* fixed shield textures
* trying out a new system to balance map drops. Bascically i don't want people spamming them all the time, but i don't want people spending hours insta killing overworld mobs for them either.
So i made a system that buffs drops if you're outside a map dimension, but nerfs them if you're inside. This should make maps a lot more precious and time gated, and allow for people to do
other minecraft things in the meantime.
* increased loot droprates in maps a bit.
* grouped all my commands under /slash
This should make using commands a lot easier
* added simple party system, untested. /slash party. For now it should disable friendly fire
* added /slash generate compatible_items modid. To auto generate large amounts of compatible item files with default values. Should save some time.

3.0.10
* buffed rarity drops default config (needs config reset)
* loot crates now dont spawn with low rarities